; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_STALL.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/etnaviv/extr_etnaviv_buffer.c_CMD_STALL.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.etnaviv_cmdbuf = type { i32 }

@VIV_FE_STALL_HEADER_OP_STALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.etnaviv_cmdbuf*, i32, i32)* @CMD_STALL to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CMD_STALL(%struct.etnaviv_cmdbuf* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.etnaviv_cmdbuf*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.etnaviv_cmdbuf* %0, %struct.etnaviv_cmdbuf** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %8 = getelementptr inbounds %struct.etnaviv_cmdbuf, %struct.etnaviv_cmdbuf* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @ALIGN(i32 %9, i32 8)
  %11 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %12 = getelementptr inbounds %struct.etnaviv_cmdbuf, %struct.etnaviv_cmdbuf* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  %13 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %14 = load i32, i32* @VIV_FE_STALL_HEADER_OP_STALL, align 4
  %15 = call i32 @OUT(%struct.etnaviv_cmdbuf* %13, i32 %14)
  %16 = load %struct.etnaviv_cmdbuf*, %struct.etnaviv_cmdbuf** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @VIV_FE_STALL_TOKEN_FROM(i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @VIV_FE_STALL_TOKEN_TO(i32 %19)
  %21 = or i32 %18, %20
  %22 = call i32 @OUT(%struct.etnaviv_cmdbuf* %16, i32 %21)
  ret void
}

declare dso_local i32 @ALIGN(i32, i32) #1

declare dso_local i32 @OUT(%struct.etnaviv_cmdbuf*, i32) #1

declare dso_local i32 @VIV_FE_STALL_TOKEN_FROM(i32) #1

declare dso_local i32 @VIV_FE_STALL_TOKEN_TO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
